absolute & relative path

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <nav>
           <ul>
             <li><a href="">Home</a></li>
-            <li><a href="">Products</a></li>
-            <li><a href="./about.html">About</a></li>
+            <li><a href="/src/pages/about.html">Products</a></li>
+            <li><a href="./src/pages/about.html">About</a></li>
           </ul>
         </nav>
         <button class="btn">LOGIN</button>
