--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="./about.css" />
   </head>
   <body>
+    <a href="../../index.html"><button>Relative</button></a>
+    <a href="/index.html"><button>Absolute</button></a>
     <!-- main>(div.box>p)*5 -->
     <main>
       <div class="box">
