--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
         <nav>
           <ul>
             <li><a href="">Home</a></li>
-            <li><a href="/src/pages/about.html">Products</a></li>
-            <li><a href="./src/pages/about.html">About</a></li>
+            <li><a href="./src/pages/product.html">Product</a></li>
+            <li><a href="/src/pages/about.html">About Absolute</a></li>
+            <li><a href="./src/pages/about.html">About Relative</a></li>
           </ul>
         </nav>
         <button class="btn">LOGIN</button>
