feat: add form hyperlink

--- a/src/pages/product.html
+++ b/src/pages/product.html
@@ -68,6 +68,7 @@
         </tr>
       </tbody>
     </table>
+    <a href="./add-data.html"><button type="button">TAMBAH DATA PENJUALAN PRODUK</button></a>
     <table>
       <colgroup>
         <col style="background-color: #eaeaea" />
