add hyperlink for layouting

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <li><a href="./src/pages/product.html">Product</a></li>
             <li><a href="/src/pages/about.html">About Absolute</a></li>
             <li><a href="./src/pages/about.html">About Relative</a></li>
+            <li><a href="./src/pages/with-layout.html">Layout</a></li>
           </ul>
         </nav>
         <button class="btn">LOGIN</button>
