add: script for index.html

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
         text-align: center;
       }
     </style>
+    <script src="./src/js/index.js" defer></script>
   </head>
   <body>
-    <span>&copy;&lt;html&gt;</span><span>FGO 23</span>
+    <span id="symbol">&copy;&lt;html&gt;</span><span>FGO 23</span>
     <h1 style="color: blue; font-size: 20px">BELAJAR HTML & CSS</h1>
     <main>
       <div>Materi HTML & CSS Basic Syntax untuk FGO 23</div>
@@ -52,4 +53,5 @@
     </aside>
     <div></div>
   </body>
+  <!-- <script src="./src/js/main.js"></script> -->
 </html>
