edit: src for css link

--- a/src/pages/add-data.html
+++ b/src/pages/add-data.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Phudu:wght@300..900&display=swap" rel="stylesheet" />
     <!-- External CSS Link -->
-    <link rel="stylesheet" href="./add-data.css" />
+    <link rel="stylesheet" href="../styles/add-data.css" />
   </head>
   <body>
     <h1>FORM PENAMBAHAN DATA PENJUALAN</h1>
