--- a/src/pages/with-layout.html
+++ b/src/pages/with-layout.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Phudu:wght@300..900&display=swap" rel="stylesheet" />
     <!-- External CSS Link -->
-    <link rel="stylesheet" href="./with-layout.css" />
+    <link rel="stylesheet" href="../styles/with-layout.css" />
   </head>
   <body>
     <main>
