--- a/src/pages/register.html
+++ b/src/pages/register.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <!-- External CSS -->
-    <link rel="stylesheet" href="register.css" />
+    <link rel="stylesheet" href="../styles/register.css" />
   </head>
   <body>
     <header>
