add: navigation to event

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <li><a href="/src/pages/about.html">About Absolute</a></li>
             <li><a href="./src/pages/about.html">About Relative</a></li>
             <li><a href="./src/pages/with-layout.html">Layout</a></li>
+            <li><a href="./src/pages/event.html">Event</a></li>
           </ul>
         </nav>
         <button class="btn">LOGIN</button>
