feat: get pokemon list

--- a/src/pages/pokemon.html
+++ b/src/pages/pokemon.html
@@ -28,96 +28,7 @@
         <div class="loading">
           <div class="loader"></div>
         </div>
-        <div class="list">
-          <div class="card">
-            <img
-              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png"
-              alt="bulbasaur"
-              width="96"
-              height="96"
-            />
-            <div>
-              <img
-                src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/types/generation-viii/sword-shield/12.png"
-                alt="grass"
-                width="200"
-                height="44"
-              /><img
-                src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/types/generation-viii/sword-shield/4.png"
-                alt="poison"
-                width="200"
-                height="44"
-              />
-            </div>
-            <p>Bulbasaur</p>
-          </div>
-          <div class="card">
-            <img
-              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png"
-              alt="bulbasaur"
-              width="96"
-              height="96"
-            />
-            <div>
-              <img
-                src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/types/generation-viii/sword-shield/12.png"
-                alt="grass"
-                width="200"
-                height="44"
-              /><img
-                src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/types/generation-viii/sword-shield/4.png"
-                alt="poison"
-                width="200"
-                height="44"
-              />
-            </div>
-            <p>Bulbasaur</p>
-          </div>
-          <div class="card">
-            <img
-              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png"
-              alt="bulbasaur"
-              width="96"
-              height="96"
-            />
-            <div>
-              <img
-                src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/types/generation-viii/sword-shield/12.png"
-                alt="grass"
-                width="200"
-                height="44"
-              /><img
-                src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/types/generation-viii/sword-shield/4.png"
-                alt="poison"
-                width="200"
-                height="44"
-              />
-            </div>
-            <p>Bulbasaur</p>
-          </div>
-          <div class="card">
-            <img
-              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png"
-              alt="bulbasaur"
-              width="96"
-              height="96"
-            />
-            <div>
-              <img
-                src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/types/generation-viii/sword-shield/12.png"
-                alt="grass"
-                width="200"
-                height="44"
-              /><img
-                src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/types/generation-viii/sword-shield/4.png"
-                alt="poison"
-                width="200"
-                height="44"
-              />
-            </div>
-            <p>Bulbasaur</p>
-          </div>
-        </div>
+        <div class="list"></div>
       </section>
     </main>
   </body>
