--- a/src/pages/todolist.html
+++ b/src/pages/todolist.html
@@ -26,58 +26,19 @@
         <p>ADD</p>
       </button>
     </header>
-    <section class="todolist">
-      <div class="card">
-        <div class="title">
-          <p>Title</p>
-        </div>
-        <div class="body">
-          <p>Body</p>
-        </div>
-      </div>
-      <div class="card">
-        <div class="title">
-          <p>Title</p>
-        </div>
-        <div class="body">
-          <p>Body</p>
-        </div>
-      </div>
-      <div class="card">
-        <div class="title">
-          <p>Title</p>
-        </div>
-        <div class="body">
-          <p>Body</p>
-        </div>
-      </div>
-      <div class="card">
-        <div class="title">
-          <p>Title</p>
-        </div>
-        <div class="body">
-          <p>Body</p>
-        </div>
-      </div>
-      <div class="card">
-        <div class="title">
-          <p>Title</p>
-        </div>
-        <div class="body">
-          <p>Body</p>
-        </div>
-      </div>
-      <div class="card">
-        <div class="title">
-          <p>Title</p>
-        </div>
-        <div class="body">
-          <p>Body</p>
-        </div>
-      </div>
-    </section>
+    <section class="todolist"></section>
     <section class="modal-wrapper">
-      <div class="modal"></div>
+      <div class="modal">
+        <form>
+          <h2>Add New Todo List</h2>
+          <label for="title">Title</label>
+          <input type="text" name="title" id="title" />
+          <label for="body">Body</label>
+          <textarea name="body" id="body"></textarea>
+          <button type="submit">SUBMIT</button>
+        </form>
+        <button type="button" class="close">x</button>
+      </div>
     </section>
   </body>
 </html>
